--- a/app/globals.css
+++ b/app/globals.css
@@ -3,61 +3,59 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
+    :root {
+        --gradient: #091e3a;
+        --background: 228 98.65% 98.26%;
+        --foreground: 228 7.3% 0.52%;
 
-    --gradient: #091E3A;
-    --background: 228 98.65% 98.26%;
-    --foreground: 228 7.3% 0.52%;
+        --muted: 228 7.3% 91.3%;
+        --muted-foreground: 228 3.65% 41.3%;
 
-    --muted: 228 7.3% 91.3%;
-    --muted-foreground: 228 3.65% 41.3%;
+        --popover: 228 31.6% 91.3%;
+        --popover-foreground: 228 7.3% 0.65%;
 
-    --popover: 228 31.6% 91.3%;
-    --popover-foreground: 228 7.3% 0.65%;
+        --card: 228 31.6% 91.3%;
+        --card-foreground: 228 7.3% 0.65%;
 
-    --card: 228 31.6% 91.3%;
-    --card-foreground: 228 7.3% 0.65%;
+        --border: 228 12.3% 89.52%;
+        --input: 228 12.3% 89.52%;
 
-    --border: 228 12.3% 89.52%;
-    --input: 228 12.3% 89.52%;
+        --primary: 228 73% 13%;
+        --primary-foreground: 228 1.46% 91.3%;
 
-    --primary: 228 73% 13%;
-    --primary-foreground: 228 1.46% 91.3%;
+        --secondary: 228 3.65% 95.65%;
+        --secondary-foreground: 228 5.38% 11.3%;
 
-    --secondary: 228 3.65% 95.65%;
-    --secondary-foreground: 228 5.38% 11.3%;
+        --accent: 228 3.65% 95.65%;
+        --accent-foreground: 228 5.38% 11.3%;
 
-    --accent: 228 3.65% 95.65%;
-    --accent-foreground: 228 5.38% 11.3%;
+        --destructive: 0 84.2% 60.2%;
+        --destructive-foreground: 0 0% 98%;
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
+        --ring: 228 73% 13%;
 
-    --ring: 228 73% 13%;
+        --radius: 0.5rem;
+    }
 
-    --radius: 0.5rem;
-  }
-
-  .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
-    --primary: 217.2 91.2% 59.8%;
-    --primary-foreground: 222.2 47.4% 11.2%;
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 224.3 76.3% 48%;
-  }
-
+    .dark {
+        --background: 222.2 84% 4.9%;
+        --foreground: 210 40% 98%;
+        --card: 222.2 84% 4.9%;
+        --card-foreground: 210 40% 98%;
+        --popover: 222.2 84% 4.9%;
+        --popover-foreground: 210 40% 98%;
+        --primary: 217.2 91.2% 59.8%;
+        --primary-foreground: 222.2 47.4% 11.2%;
+        --secondary: 217.2 32.6% 17.5%;
+        --secondary-foreground: 210 40% 98%;
+        --muted: 217.2 32.6% 17.5%;
+        --muted-foreground: 215 20.2% 65.1%;
+        --accent: 217.2 32.6% 17.5%;
+        --accent-foreground: 210 40% 98%;
+        --destructive: 0 62.8% 30.6%;
+        --destructive-foreground: 210 40% 98%;
+        --border: 217.2 32.6% 17.5%;
+        --input: 217.2 32.6% 17.5%;
+        --ring: 224.3 76.3% 48%;
+    }
 }
